--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@ body {
   font-feature-settings:
     'rlig' 1,
     'calt' 1;
+  background-color: black;
+  background-image: url("/background.png");
 }
 
 figcaption {
